title bar is fixed now, and no more scrollbar

--- a/src/renderer/customTitleBar/TitleBar.module.css
+++ b/src/renderer/customTitleBar/TitleBar.module.css
@@ -1,6 +1,7 @@
 .bar {
     display: flex;
-    position: static;
+    position: fixed;
+    width: 100%;
     align-items: center;
     padding-left: 1rem;
     -webkit-app-region: drag;
